# ChangeLog for app-portage/layman
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.81 2009/12/29 11:45:14 sping Exp $

  29 Dec 2009; Sebastian Pipping <sping@gentoo.org> layman-1.1.1.ebuild:
  Add dependency on pyxml for xml.dom.minidom (bug #264263)

*layman-9999 (29 Dec 2009)

  29 Dec 2009; Sebastian Pipping <sping@gentoo.org> +layman-9999.ebuild:
  Add live ebuild

  05 Dec 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  layman-1.2.4.ebuild:
  Set SUPPORT_PYTHON_ABIS.

*layman-1.2.4 (04 Dec 2009)

  04 Dec 2009; Sebastian Pipping <sping@gentoo.org> +layman-1.2.4.ebuild,
  metadata.xml:
  Trivial bump to 1.2.4, take over maintenance

  24 May 2009; Jeroen Roovers <jer@gentoo.org> layman-1.2.3.ebuild:
  Stable for HPPA (bug #257155).

  23 May 2009; Markus Meier <maekke@gentoo.org> layman-1.2.3.ebuild:
  amd64 stable, bug #257155

  22 May 2009; Raúl Porcel <armin76@gentoo.org> layman-1.2.3.ebuild:
  alpha/arm/ia64/sparc stable wrt #257155

  19 May 2009; Brent Baude <ranger@gentoo.org> layman-1.2.3.ebuild:
  stable ppc64, bug 257155

  18 May 2009; Christian Faulhammer <fauli@gentoo.org> layman-1.2.3.ebuild:
  stable x86, bug 257155

  17 May 2009; nixnut <nixnut@gentoo.org> layman-1.2.3.ebuild:
  ppc stable #257155

  05 Apr 2009; Markus Ullmann <jokey@gentoo.org> layman-1.1.1.ebuild,
  layman-1.2.3.ebuild:
  Missing dependency, bug #255342

  27 Mar 2009; Raúl Porcel <armin76@gentoo.org> layman-1.1.1.ebuild:
  arm stable

  07 Mar 2009; Petteri Räty <betelgeuse@gentoo.org> layman-1.1.1.ebuild,
  layman-1.2.3.ebuild:
  Migrate to EAPI 2.

  07 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
  -layman-1.1.1-r1.ebuild, -layman-1.2.0-r1.ebuild, -layman-1.2.2.ebuild:
  Remove old versions.

  03 Feb 2009; Peter Volkov <pva@gentoo.org> layman-1.2.3.ebuild:
  ~mips keyworded.

*layman-1.2.3 (01 Jan 2009)
