@@ -1,8 +1,9 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/Attic/layman-1.2.3.ebuild,v 1.10 2009/05/24 22:09:25 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/Attic/layman-1.2.3.ebuild,v 1.11 2009/12/30 22:23:44 sping Exp $
 
 EAPI="2"
+NEED_PYTHON=2.5
 
 inherit eutils distutils
 
@@ -15,9 +16,12 @@ SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 sparc x86 ~x86-fbsd"
 IUSE="git subversion test"
 
-DEPEND="dev-python/pyxml
+COMMON_DEPS="|| (
+	dev-lang/python[xml]
+	( dev-lang/python dev-python/pyxml ) )"
+DEPEND="${COMMON_DEPS}
 	test? ( dev-util/subversion )"
-RDEPEND=">=dev-lang/python-2.5
+RDEPEND="${COMMON_DEPS}
 	git? ( dev-util/git )
 	subversion? (
 		|| (
